--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,8 +47,10 @@
         </activity>
         <!--para que nuestra clase servicio funcione hay que ponrla aqui como un servicio-->
         <service android:name=".MostrarNotificacionService"/>
-        <service android:name=".ServiceNotificacion"
-            android:permission="android.permission.BIND_JOB_SERVICE"/>
+        <receiver
+            android:name=".MostrarNotifyBroadcastReceiver"
+            android:process=":remote" >
+        </receiver>
     </application>
 
 </manifest>
