--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
              <uses-permission android:name="android.permission.WAKE_LOCK" />
      -->
     <!--PERMISO DE ALARMA en principio todo vibracion escribir y leer  el reloj el calendatio -->
+    <!--PERMISO DE ALARMA en principio para que reciba para que trabaje en segundo plano para el sonido u la vibracion-->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
@@ -31,6 +32,7 @@
         <!--hay que modificar el manifest asi poniendo esto tal cual o no volveremos a la pantalla principal -->
         <activity android:name=".OirNotificacionActivity"
             android:parentActivityName=".MainActivity">
+            <!--para quedarse dentro de la aplicacion es el parent-->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"
@@ -41,12 +43,12 @@
                 <action android:name="android.intent.action.MAIN" />
                 <!--NUEVA ACCION-->
                 <action android:name="android.intent.action.SET_ALARM"/>
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--para que nuestra clase servicio funcione hay que ponrla aqui como un servicio-->
-        <service android:name=".MostrarNotificacionService"/>
+        <!--para que nuestra clase servicio funcione hay que ponrla aqui como un servicio y poner el remote
+        esto esta duplicado
+        <service android:name=".MostrarNotificacionService"/> -->
         <receiver
             android:name=".MostrarNotifyBroadcastReceiver"
             android:process=":remote" >
