--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,26 +11,29 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--PERMISOS DUPLICADOS
-         <uses-permission android:name="android.permission.READ_CALENDAR" />
-             <uses-permission android:name="android.permission.WAKE_LOCK" />
-     -->
+
     <!--PERMISO DE ALARMA en principio todo vibracion escribir y leer  el reloj el calendatio -->
+    <!--PERMISO DE ALARMA en principio para que reciba para que trabaje en segundo plano para el sonido u la vibracion-->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <!--hay que modificar el manifest asi poniendo esto tal cual o no volveremos a la pantalla principal -->
+    <!-- permiso para el boot de inicio-->
+    <!--  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+      permiso para que este en stamina-->
+    <!-- <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/> -->
+
+   <application
+       android:allowBackup="true"
+       android:icon="@mipmap/ic_launcher"
+       android:label="@string/app_name"
+       android:roundIcon="@mipmap/ic_launcher_round"
+       android:supportsRtl="true"
+       android:theme="@style/AppTheme">
+       <!--hay que modificar el manifest asi poniendo esto tal cual o no volveremos a la pantalla principal junto con las lineas de abriractivityEscuchar -->
         <activity android:name=".OirNotificacionActivity"
             android:parentActivityName=".MainActivity">
+            <!--para quedarse dentro de la aplicacion es el parent-->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"
@@ -41,12 +44,14 @@
                 <action android:name="android.intent.action.MAIN" />
                 <!--NUEVA ACCION-->
                 <action android:name="android.intent.action.SET_ALARM"/>
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--para que nuestra clase servicio funcione hay que ponrla aqui como un servicio-->
         <service android:name=".MostrarNotificacionService"/>
+        <receiver
+            android:name=".MostrarNotifyBroadcastReceiver"
+            android:process=":remote" >
+        </receiver>
     </application>
 
 </manifest>
